<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_nav_graph"
    app:startDestination="@id/homeFragment">

    <fragment
        android:id="@+id/homeFragment"
        android:name="com.example.newsapp.ui.home.HomeFragment"
        android:label="@string/home"
        tools:layout="@layout/fragment_home">
        <action
            android:id="@+id/action_homeFragment_to_articleDetailFragment"
            app:destination="@id/articleDetailFragment" />
    </fragment>

    <fragment
        android:id="@+id/savedFragment"
        android:name="com.example.newsapp.ui.saved.SavedFragment"
        android:label="@string/saved"
        tools:layout="@layout/fragment_saved">
        <action
            android:id="@+id/action_savedFragment_to_articleDetailFragment"
            app:destination="@id/articleDetailFragment" />
    </fragment>

    <fragment
        android:id="@+id/searchFragment"
        android:name="com.example.newsapp.ui.search.SearchFragment"
        android:label="@string/search"
        tools:layout="@layout/fragment_search">
        <action
            android:id="@+id/action_searchFragment_to_articleDetailFragment"
            app:destination="@id/articleDetailFragment" />
    </fragment>

    <fragment
        android:id="@+id/articleDetailFragment"
        android:name="com.example.newsapp.ui.detail.ArticleDetailFragment"
        android:label="Article Detail"
        tools:layout="@layout/fragment_article_detail" />
</navigation>